--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container-fluid px-5" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
       <h2 class="section-title gradient-text mb-4">About Me</h2>
       <p class="fs-5 text-secondary">
-        I’m Vivek Shravan Gupta, a passionate software developer and graduate student in Computer Science at DePaul University. My journey blends full-stack web development, machine learning, and cloud computing into real-world, high-impact solutions. With a background rooted in engineering and a hunger for innovation, I’ve built AI-powered tools, immersive campus apps, and scalable systems that solve real problems.
+        I’m Vivek Shravan Gupta, a passionate software developer and recently graduated in Computer Science from DePaul University. My journey blends full-stack web development, machine learning, and cloud computing into real-world, high-impact solutions. With a background rooted in engineering and a hunger for innovation, I’ve built AI-powered tools, immersive campus apps, and scalable systems that solve real problems.
       </p>
       <p class="fs-5 text-secondary">
         Beyond code, I believe in precision, purpose, and progress — crafting clean solutions, collaborating across disciplines, and constantly learning. Whether it's building smarter pipelines or optimizing user experiences, I bring energy, integrity, and results to every project.
